--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="description" content="Your description here" />
     <meta name="author" content="Rashaun Dillard" />
     <meta name="keywords" content="keyword1, keyword2, keyword3" />
-    <link rel="stylesheet" href="/vendor/normalize.css" />
-    <link rel="stylesheet" href="/pages/index.css" />
+    <link rel="stylesheet" href="vendor/normalize.css" />
+    <link rel="stylesheet" href="pages/index.css" />
     <link
       rel="icon"
       href="se_project_coffeeshop/favicon.ico"
