--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             class="nav__logo"
           />
           <ul class="nav__links">
-            <li><a href="" class="nav__link">Recipes</a></li>
+            <li><a href="#recipes" class="nav__link">Recipes</a></li>
             <li><a href="" class="nav__link">Book a table</a></li>
             <li><a href="" class="nav__link">Menu</a></li>
             <li><a href="" class="nav__link">Contacts</a></li>
@@ -63,7 +63,7 @@
         </div>
       </header>
       <main class="content">
-        <section class="recipes">
+        <section class="recipes" id="recipes">
           <h2 class="recipes__title">Recipes</h2>
           <p class="recipes__subtitle">
             Check out some recipes we've collected for your home-brewing
@@ -72,8 +72,8 @@
           <div class="recipes__videos">
             <div>
               <iframe
-                width="490"
                 height="273"
+                width="480"
                 src="https://www.youtube.com/embed/j6VlT_jUVPc?si=T-P7cptF-T_wLxtg"
                 title="YouTube video player"
                 frameborder="0"
@@ -88,8 +88,8 @@
             </div>
             <div>
               <iframe
-                width="490"
                 height="273"
+                width="480"
                 src="https://www.youtube.com/embed/st571DYYTR8?si=jzDboKNUV5HZ5vn7"
                 title="YouTube video player"
                 frameborder="0"
