--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
           />
           <ul class="nav__links">
             <li><a href="#recipes" class="nav__link">Recipes</a></li>
-            <li><a href="" class="nav__link">Book a table</a></li>
-            <li><a href="" class="nav__link">Menu</a></li>
-            <li><a href="" class="nav__link">Contacts</a></li>
+            <li><a href="#" class="nav__link">Book a table</a></li>
+            <li><a href="#" class="nav__link">Menu</a></li>
+            <li><a href="#" class="nav__link">Contacts</a></li>
           </ul>
         </nav>
         <img
@@ -72,11 +72,9 @@
           <div class="recipes__videos">
             <div>
               <iframe
-                height="273"
-                width="480"
+                class="recipes__iframe"
                 src="https://www.youtube.com/embed/j6VlT_jUVPc?si=T-P7cptF-T_wLxtg"
                 title="YouTube video player"
-                frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                 referrerpolicy="strict-origin-when-cross-origin"
                 allowfullscreen
@@ -88,11 +86,9 @@
             </div>
             <div>
               <iframe
-                height="273"
-                width="480"
+                class="recipes__iframe"
                 src="https://www.youtube.com/embed/st571DYYTR8?si=jzDboKNUV5HZ5vn7"
                 title="YouTube video player"
-                frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                 referrerpolicy="strict-origin-when-cross-origin"
                 allowfullscreen
