--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
           />
           <ul class="nav__links">
             <li><a href="#recipes" class="nav__link">Recipes</a></li>
-            <li><a href="#" class="nav__link">Book a table</a></li>
-            <li><a href="#" class="nav__link">Menu</a></li>
-            <li><a href="#" class="nav__link">Contacts</a></li>
+            <li><a href="#reservation" class="nav__link">Book a table</a></li>
+            <li><a href="#menu" class="nav__link">Menu</a></li>
+            <li><a href="#contacts" class="nav__link">Contacts</a></li>
           </ul>
         </nav>
         <img
@@ -100,9 +100,32 @@
             </div>
           </div>
         </section>
-        <section class="reservation"></section>
-        <section class="menu"></section>
-        <section class="about"></section>
+        <section class="reservation" id="reservation">
+          <h2 class="reservation__title">Book a table</h2>
+          <form action="" class="reservation__form form">
+            <fieldset class="form__fieldset">
+              <label for="" class="form__label">
+                Name *<input type="text" class="form__input" />
+              </label>
+              <label for="" class="form__label">
+                Number of guests *<input type="number" class="form__input" />
+              </label>
+              <label for="" class="form__label">
+                Date & time *<input type="datetime-local" class="form__input" />
+              </label>
+              <label for="" class="form__label">
+                Your email *<input type="email" class="form__input" />
+              </label>
+            </fieldset>
+            <button class="form__button">Book a table</button>
+            <label for="" class="form__label form__label_type_checkbox">
+              <input type="checkbox" class="form__checkbox" />
+              I agree with terms of use
+            </label>
+          </form>
+        </section>
+        <section class="menu" id="menu"></section>
+        <section class="about" id="contacts"></section>
       </main>
       <footer class="footer"></footer>
     </div>
