--- a/index.html
+++ b/index.html
@@ -105,16 +105,28 @@
           <form class="reservation__form form">
             <fieldset class="form__fieldset">
               <label for="name" class="form__label">
-                Name *<input type="text" class="form__input" />
+                Name *<input type="text" id="name" class="form__input" />
               </label>
               <label for="number-of-guest" class="form__label">
-                Number of guests *<input type="number" class="form__input" />
+                Number of guests *<input
+                  type="number"
+                  id="number-of-guest"
+                  class="form__input"
+                />
               </label>
               <label for="date-time" class="form__label">
-                Date & time *<input type="datetime-local" class="form__input" />
+                Date & time *<input
+                  type="datetime-local"
+                  id="date-time"
+                  class="form__input"
+                />
               </label>
               <label for="your-email" class="form__label">
-                Your email *<input type="email" class="form__input" />
+                Your email *<input
+                  type="email"
+                  id="your-email"
+                  class="form__input"
+                />
               </label>
             </fieldset>
             <button class="form__button">Book a table</button>
