--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
               for="form_checkbox"
               class="form__label form__label_type_checkbox"
             >
-              <input type="checkbox" class="form__checkbox" />
+              <input type="checkbox" id="form_checkbox" class="form_checkbox" />
               I agree with terms of use
             </label>
           </form>
