--- a/index.html
+++ b/index.html
@@ -131,10 +131,10 @@
             </fieldset>
             <button class="form__button">Book a table</button>
             <label
-              for="form_checkbox"
+              for="form-checkbox"
               class="form__label form__label_type_checkbox"
             >
-              <input type="checkbox" id="form_checkbox" class="form_checkbox" />
+              <input type="checkbox" id="form_checkbox" class="form-checkbox" />
               I agree with terms of use
             </label>
           </form>
