--- a/index.html
+++ b/index.html
@@ -134,7 +134,11 @@
               for="form-checkbox"
               class="form__label form__label_type_checkbox"
             >
-              <input type="checkbox" id="form_checkbox" class="form-checkbox" />
+              <input
+                type="checkbox"
+                id="form-checkbox"
+                class="form__checkbox"
+              />
               I agree with terms of use
             </label>
           </form>
