--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <header class="header">
         <nav class="nav">
           <img
-            src="./images/logo_coffeeshop_dark.svg"
+            src="images/logo_coffeeshop_dark.svg"
             alt="Coffeeshop logo"
             class="nav__logo"
           />
@@ -38,7 +38,7 @@
           </ul>
         </nav>
         <img
-          src="./images/inside_coffee_shop.png"
+          src="images/inside_coffee_shop.png"
           alt="header image"
           class="header__image"
         />
@@ -238,7 +238,7 @@
       <footer id="footer" class="footer">
         <div class="footer__content">
           <img
-            src="./images/logo_coffeeshop_light.svg"
+            src="images/logo_coffeeshop_light.svg"
             alt="TripleTen logo"
             class="footer__logo"
           />
@@ -248,7 +248,7 @@
               <li class="footer__list-item">
                 <a href="#" class="footer__social-link">
                   <img
-                    src="./images/facebook_white.svg"
+                    src="images/facebook_white.svg"
                     alt="facebook logo"
                     class="footer__social-icon"
                   />Facebook</a
@@ -258,7 +258,7 @@
               <li class="footer__list-item">
                 <a href="#" class="footer__social-link">
                   <img
-                    src="./images/instagram_white.svg"
+                    src="images/instagram_white.svg"
                     alt="instagram logo"
                     class="footer__social-icon"
                   />Instagram</a
